syntax = "proto3";

option csharp_namespace = "Management.Api.Grpc";

service ManagementApiGrpcService {
  rpc GetBusinessDirectoryById (ByIdMessage) returns (IdNameMessage);
  rpc GetCurrencyById (ByIdMessage) returns (IdNameMessage);
  rpc GetLanguageById (ByIdMessage) returns (IdNameMessage);
  rpc GetPaymentMethodById (ByIdMessage) returns (IdNameMessage);
  rpc GetPricingPlanById (ByIdMessage) returns (IdNameMessage);
}


message ByIdMessage {
  string id = 1;
}

message IdNameMessage {
  string id = 1;
  string name = 2;
}